--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <br><br>
 
-        <img src="img.jpg" alt="Mi Foto de Perfil">
+        <img src="img.jpg" alt="Foto">
 
         <br><br>
         <button onclick="HolaMundo()"type="button">Mensaje en consola</button>
